Creating all the gamemode

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,8 @@
-name: Blue Lock Battle
+name: BlueLockBattle
 version: 1.0
 main: com.mguhc.Blb
 api-version: 1.8
+
+commands:
+  tag:
+    description: Une commande pour changer le name tag du joueur
